# python_pkgs

./: .gitignore  README.md  noxfile.py  pyproject.toml  requirements.dev.txt  requirements.txt  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: uv-bump-package-versions.yml  uv-export-requirements.yml  uv-ruff-lint-code.yml  zip_release.yml
libs/coreutils-lib/: README.md
libs/coreutils-lib/src/core_utils/df_utils/: __init__.py
libs/coreutils-lib/src/core_utils/df_utils/convert/: __init__.py  _converters.py
libs/coreutils-lib/src/core_utils/df_utils/io/: __init__.py
libs/coreutils-lib/src/core_utils/df_utils/pd_config/: __init__.py
libs/coreutils-lib/src/core_utils/df_utils/validators/: __init__.py
libs/coreutils-lib/src/core_utils/hash_utils/: methods.py
libs/coreutils-lib/src/core_utils/list_utils/: methods.py
libs/coreutils-lib/src/core_utils/path_utils/: methods.py
libs/coreutils-lib/src/core_utils/time_utils/: methods.py
libs/coreutils-lib/src/core_utils/uuid_utils/: __init__.py  classes.py  constants.py  operations.py  validators.py
libs/database-lib/: README.md  pyproject.toml
libs/database-lib/src/db_lib/: __init__.py  __methods.py  base.py  mixins.py  utils.py
libs/database-lib/src/db_lib/demo_db/: __init__.py  __methods.py  constants.py
libs/depends-lib/: README.md  pyproject.toml
libs/depends-lib/src/depends/: db_depends.py
libs/http-lib/: README.md  pyproject.toml
libs/http-lib/src/http_lib/: __init__.py  cache.py  client.py  controllers.py  response_codes.py
libs/httpx-lib/: pyproject.toml
libs/httpx-lib/src/httpx_lib/: __init__.py
libs/httpx-lib/src/httpx_lib/controllers/: __init__.py  _base.py  _controller.py
libs/httpx-lib/src/httpx_lib/controllers/aio/: __init__.py  _async_base.py  _async_controller.py
libs/minio-lib/: pyproject.toml
libs/minio-lib/src/minio_lib/: __init__.py  controller.py
libs/pandas-lib/: pyproject.toml
libs/pandas-lib/src/pd_utils/: __init__.py
libs/pandas-lib/src/pd_utils/utils/: __init__.py
libs/pandas-lib/src/pd_utils/validators/: type_validators.py
libs/platform-lib/: pyproject.toml
libs/platform-lib/src/platform_lib/: __init__.py  __main__.py  ascii_art.py  constants.py  helpers.py  main.py  methods.py  script.py  types.py
libs/platform-lib/src/platform_lib/classes/: __init__.py  base.py  converted_bytes.py  mixins.py  platform.py  spinners.py
libs/platform-lib/src/platform_lib/enums/: __init__.py  _enums.py
libs/settings-lib/: README.md  pyproject.toml
libs/settings-lib/src/settings/: __init__.py  api_settings.py  app_settings.py  base.py  celery_settings.py  db_settings.py  github_settings.py  logging_settings.py
libs/setup-lib/: README.md  pyproject.toml
libs/setup-lib/src/setup/: __init__.py  __setup_db.py  __setup_logging.py
libs/setup-lib/src/setup/database/: __init__.py  __setup_db.py
libs/setup-lib/src/setup/logging/: __init__.py  __loguru.py
libs/time-utils/: pyproject.toml
libs/time-utils/src/time_utils/: __init__.py  constants.py  operations.py
pipelines/: README.md
pipelines/github-actions/: README.md  bump-uv-package-versions.yml  ruff-lint-code.yml
pipelines/github-actions/workflows/: build-deploy-mkdocs.yml  bump-uv-package-versions.yml  commit-changes.yml  ruff-lint-code.yml  uv-bump-package-versions.yml  uv-export-requirements.yml  uv-nox-tests.yml  uv-publish-pypi.yml  uv-publish-test-pypi.yml  uv-ruff-lint-code.yml
sandbox/core_utils/: sandbox_coreutils.py
sandbox/database_lib/: sandbox_dblib.py
sandbox/depends_lib/: sandbox_depends.py
sandbox/http_lib/: sandbox_http.py
sandbox/minio_lib/: sandbox_minio.py
sandbox/pandas_lib/: sandbox_pandas.py
sandbox/platform_lib/: sandbox_platform.py  script_version.py
sandbox/setup_lib/: sandbox_setup.py
sandbox/time_utils/: sandbox_time.py
scripts/: run_sandbox_scripts.py
scripts/database/mysql/: dump_mysql_db.py
scripts/database/postgres/: dump_postgres_db.py
tests/libs/coreutils/: __init__.py  fixtures.py  test_hash_utils.py  test_list_utils.py  test_path_utils.py  test_time_utils.py  test_uuid_utils.py
tests/libs/setuplib/: __init__.py  fixtures.py  test_stdlib_logging.py
tests/libs/timeutils/: __init__.py  fixtures.py  test_time_utils.py
