[project]
name = "python-pkgs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coreutils-lib",
    "database-lib",
    "http-lib",
    "loguru>=0.7.3",
    "pandas-lib",
    "settings-lib",
    "setup-lib",
    "time-utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
py-modules = []

[tool.hatch.build.targets.wheel]
packages = [
    "libs/core_utils",
    "libs/database",
    "libs/http",
    "libs/pandas",
    "libs/settings",
    "libs/setup",
    "libs/time_utils",
]

[tool.uv.workspace]
members = ["libs/*"]

[tool.uv.sources]
coreutils-lib = { workspace = true }
database-lib = { workspace = true }
http-lib = { workspace = true }
pandas-lib = { workspace = true }
settings-lib = { workspace = true }
setup-lib = { workspace = true }
time-utils = { workspace = true }

[dependency-groups]
dev = ["alembic>=1.14.1", "nox>=2025.2.9", "pytest-xdist>=3.6.1", "ruff>=0.9.5"]
