[project]
name = "database-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "redjax", email = "no@none.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "pymysql>=1.1.1",
    "settings-lib",
    "sqlalchemy>=2.0.37",
]

[project.scripts]
database-lib = "database_lib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/db_lib"]

[tool.uv.sources]
settings-lib = { workspace = true }
