[project]
name = "depends-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "redjax", email = "no@none.com" }
]
requires-python = ">=3.11"
dependencies = [
    "coreutils-lib",
    "database-lib",
    "settings-lib",
]

[project.scripts]
depends-lib = "depends_lib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/depends"]

[tool.uv.sources]
coreutils-lib = { workspace = true }
settings-lib = { workspace = true }
database-lib = { workspace = true }
