[project]
name = "httpx-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "redjax", email = "5534031+redjax@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "hishel>=0.1.2",
    "httpx>=0.28.1",
    "redis>=6.2.0",
]

[project.scripts]
httpx-lib = "httpx_lib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
