[project]
name = "pandas-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "redjax", email = "no@none.com" }]
requires-python = ">=3.12"
dependencies = ["pandas>=2.2.3", "pyarrow>=19.0.1", "sqlalchemy>=2.0.38"]

[project.scripts]
pandas-lib = "pandas_lib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pd_utils"]
