[project]
name = "platform-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "redjax", email = "no@none.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
platform-lib = "platform_lib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
