[project]
name = "time-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "redjax", email = "no@none.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
time-utils = "time_utils:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
